# AI-ML-DL

./: .gitignore  README.md
DocRagApp/: README.md  op.log.txt  output_1.txt  pyproject.toml
DocRagApp/src/: DocRagCrew.py  pdfsearchtool.py  tool.py  ui-simple.py  ui.py  ui2.py
DocRagApp/src/config/: agent_config.yaml  task_config.yaml
GenAPIModelTest1/: agents.py  crewai_demo.py  modeltest1.py  sagemakertest1.py  sagemakertest2.py  tasks.py  tools.py
crewai-doc-rag/: DocRagCrew.py  README.md  agent.py  bubllesort.py  input.txt  main.py  op.log.txt  pdfsearchtool.py  pyproject.toml  ui.py
crewai-doc-rag/crewai_doc_rag/: DocRagCrew.py  agent.py  app.py  binsort.py  input.txt  longestvowel.py  main.py  pdfsearchtool_1.py  task.py  tool.py  ui.py
crewai-doc-rag/crewai_doc_rag/config/: agent_config.yaml  task_config.yaml
mcpserver1/: README.md  main.py  pyproject.toml
mcpserverclientapp1/: .gitignore  README.md  fastmcpserver.py  get_users_via_mcp.py  main.py  mcpserver.py  pyproject.toml
mcpserverclientapp1/nodesvc/: README.md  package-lock.json  package.json  server.js  users.json
