[project]
name = "crewai-doc-rag"
version = "0.0.1"
description = "A Simple RAG app for document search"
authors = [
    {name = "Rashmin Gadhvi",email = "rashmingadhavi@proton.me"}
]
license = {text = "IIT"}
readme = "README.md"
packages = [{include = "crewai_doc_rag"}]

requires-python = ">=3.12,<3.13"



dependencies = [
    "crewai>=0.108.0,<0.109.0",
    "crewai-tools>=0.38.1,<0.39.0",
    "databricks-sdk (>=0.47.0,<0.48.0)",
    "ollama (>=0.4.7,<0.5.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
